2018-12-28  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/alpha/fpu/libm-test-ulps: Regenerated.

2018-12-18  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    James Clarke  <jrtc27@jrtc27.com>

	[BZ #23967]
	* sysdeps/unix/sysv/linux/kernel_sigaction.h (HAS_SA_RESTORER):
	Define if SA_RESTORER is defined.
	(kernel_sigaction): Define sa_restorer if HAS_SA_RESTORER is defined.
	(SET_SA_RESTORER, RESET_SA_RESTORER): Define iff the macro are not
	already defined.
	* sysdeps/unix/sysv/linux/m68k/kernel_sigaction.h (SA_RESTORER,
	kernel_sigaction, SET_SA_RESTORER, RESET_SA_RESTORER): Remove
	definitions.
	(HAS_SA_RESTORER): Define.
	* sysdeps/unix/sysv/linux/sparc/kernel_sigaction.h (SA_RESTORER,
	SET_SA_RESTORER, RESET_SA_RESTORER): Remove definition.
	(HAS_SA_RESTORER): Define.
	* sysdeps/unix/sysv/linux/nios2/kernel_sigaction.h: Include generic
	kernel_sigaction after define SET_SA_RESTORER and RESET_SA_RESTORER.
	* sysdeps/unix/sysv/linux/powerpc/kernel_sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/kernel_sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sigaction.c: Likewise.

2018-10-30  Andreas Schwab  <schwab@suse.de>

	[BZ #23125]
	* sysdeps/riscv/start.S (ENTRY_POINT): Mark ra as undefined.
	Don't use tail call.
	* elf/tst-unwind-main.c: New file.
	* elf/Makefile (tests): Add tst-unwind-main.
	(CFLAGS-tst-unwind-main.c): Define.

2018-12-15  Florian Weimer  <fweimer@redhat.com>

	* support/blob_repeat.c (check_mul_overflow_size_t): New function.
	(minimum_stride_size): Use it.
	(support_blob_repeat_allocate): Likewise.

2018-12-13  Andreas Schwab  <schwab@suse.de>

	[BZ #23861]
	* nptl/pthread_rwlock_common.c: Reindent.  Fix typos.
	(__pthread_rwlock_rdlock_full): Update expected value for
	__readers while waiting on PTHREAD_RWLOCK_RWAITING.
	* nptl/tst-rwlock-pwn.c: New file.
	* nptl/Makefile (tests): Add tst-rwlock-pwn.

2018-12-12  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #23614]